<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:id="@+id/toolBar"
            android:background="@color/colorPrimaryDark"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/details" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/dummy_title"
            android:scaleType="fitCenter"
            android:background="@color/backgroundColor"
            android:src="@drawable/job_details" />

        <org.mmtextview.components.MMTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivImage"
            android:textStyle="bold"
            android:layout_margin="@dimen/margin_medium_2"
            android:text="@string/dummy_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_heading_1x" />

        <org.mmtextview.components.MMTextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitle"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:text="@string/dummy_location"
            android:textColor="@color/primarayText"
            android:textSize="@dimen/text_regular" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/margin_medium_2"
            app:cardCornerRadius="@dimen/margin_medium"
            android:layout_below="@+id/tvDesc"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_margin="@dimen/margin_medium_2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_medium">

                <org.mmtextview.components.MMTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/job_duration"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_regular_2x" />

                <org.mmtextview.components.MMTextView
                    android:id="@+id/tvFare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:drawableStart="@drawable/ic_attach_money_black_24dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/secondaryText"
                    android:drawablePadding="@dimen/margin_medium_2"
                    android:text="@string/job_duration" />

                <org.mmtextview.components.MMTextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:drawableStart="@drawable/ic_map_black_24dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/secondaryText"
                    android:drawablePadding="@dimen/margin_medium_2"
                    android:text="@string/job_duration" />

                <org.mmtextview.components.MMTextView
                    android:id="@+id/tvPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:drawableStart="@drawable/ic_phone_iphone_black_24dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/secondaryText"
                    android:drawablePadding="@dimen/margin_medium_2"
                    android:text="@string/job_duration" />

                <org.mmtextview.components.MMTextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/secondaryText"
                    android:drawablePadding="@dimen/margin_medium_2"
                    android:text="@string/job_duration" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <org.mmtextview.components.MMButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"
            android:text="@string/apply_now"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>